# swagger/flexlb-api-spec.yaml
@@ -98,7 +98,6 @@ paths:
           $ref: '#/responses/trait:standardErrors:404'
         '500':
           $ref: '#/responses/trait:standardErrors:500'
-  /instances/{name}:
     put:
       description: 'Modify Instance'
       tags:
@@ -109,13 +108,6 @@ paths:
       consumes:
         - application/json
       parameters:
-        - name: name
-          in: path
-          description: 'Instance name'
-          required: true
-          x-nullable: false
-          pattern: ^[A-Za-z0-9\-_.]{1,32}$
-          type: string
         - name: config
           in: body
           required: true
@@ -137,6 +129,7 @@ paths:
           $ref: '#/responses/trait:standardErrors:404'
         '500':
           $ref: '#/responses/trait:standardErrors:500'
+  /instances/{name}:
     get:
       description: 'Get Instance'
       tags:
@@ -318,16 +311,9 @@ responses:
 definitions:
   ReadyStatus:
     description: 'Ready status'
-    required:
-      - status
-    properties:
-      status:
-        type: string
-        x-nullable: false
-        description: 'Ready status'
-        enum:
-          - ready
-          - keepalived_not_ready
+    type: object
+    additionalProperties:
+      type: string
   Instance:
     description: 'Instance'
     required:
@@ -335,6 +321,9 @@ definitions:
       - config
       - status
     properties:
+      config: 
+        "$ref": "#/definitions/InstanceConfig"
+        x-nullable: false
       id:
         type: integer
         format: uint8
@@ -342,30 +331,26 @@ definitions:
         maximum: 255
         x-nullable: false
         description: 'Instance ID'
-      config: 
-        "$ref": "#/definitions/InstanceConfig"
+      last_modified:
+        type: integer
+        format: int64
+        minimum: 0
         x-nullable: false
+        description: 'Last modified time'
       status:
-        type: string
+        type: object
         x-nullable: false
         description: 'Instance status'
-        enum:
-          - up
-          - down
-          - pending
+        additionalProperties:
+          type: string
   InstanceConfig:
     description: 'Instance config'
     required:
       - name
       - frontend_interface
-      - state
-      - priority
       - frontend_ipaddress
-      - frontend_port
       - frontend_net_prefix
-      - mode
-      - balance
-      - backend_servers
+      - endpoints
     properties:
       name:
         type: string
@@ -378,34 +363,12 @@ definitions:
         pattern: ^[A-Za-z0-9\-_.]{1,32}$
         description: 'Frontend network interface'
         example: 'eth0'
-      state:
-        type: string
-        default: MASTER
-        x-nullable: false
-        description: 'Instance state'
-        enum:
-          - MASTER
-          - BACKUP
-      priority:
-        type: integer
-        format: uint8
-        minimum: 1
-        maximum: 100
-        default: 100
-        x-nullable: false
-        description: 'Instance priority'
       frontend_ipaddress:
         type: string
         x-nullable: false
         description: 'Frontend IP address'
         pattern: ((^\s*((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))\s*$)|(^\s*((([0-9A-Fa-f]{1,4}:){7}([0-9A-Fa-f]{1,4}|:))|(([0-9A-Fa-f]{1,4}:){6}(:[0-9A-Fa-f]{1,4}|((25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)){3})|:))|(([0-9A-Fa-f]{1,4}:){5}(((:[0-9A-Fa-f]{1,4}){1,2})|:((25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)){3})|:))|(([0-9A-Fa-f]{1,4}:){4}(((:[0-9A-Fa-f]{1,4}){1,3})|((:[0-9A-Fa-f]{1,4})?:((25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)){3}))|:))|(([0-9A-Fa-f]{1,4}:){3}(((:[0-9A-Fa-f]{1,4}){1,4})|((:[0-9A-Fa-f]{1,4}){0,2}:((25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)){3}))|:))|(([0-9A-Fa-f]{1,4}:){2}(((:[0-9A-Fa-f]{1,4}){1,5})|((:[0-9A-Fa-f]{1,4}){0,3}:((25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)){3}))|:))|(([0-9A-Fa-f]{1,4}:){1}(((:[0-9A-Fa-f]{1,4}){1,6})|((:[0-9A-Fa-f]{1,4}){0,4}:((25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)){3}))|:))|(:(((:[0-9A-Fa-f]{1,4}){1,7})|((:[0-9A-Fa-f]{1,4}){0,5}:((25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|[1-9]?\d)){3}))|:)))(%.+)?\s*$))
         example: '192.168.1.2'
-      frontend_port:
-        type: integer
-        format: uint16
-        x-nullable: false
-        description: 'Frontend port'
-        example: 443
       frontend_net_prefix:
         type: integer
         format: uint8
@@ -415,12 +378,53 @@ definitions:
         x-nullable: false
         description: 'Frontend network prefix'
         example: 24
+      endpoints:
+        type: array
+        x-nullable: false
+        description: 'Endpoints'
+        items:
+          "$ref": "#/definitions/Endpoint"
+  Endpoint:
+    additionalProperties: false
+    description: 'Endpoint'
+    required:
+      - frontend_port
+      - mode
+      - balance
+      - backend_servers
+    properties:
+      frontend_port:
+        type: integer
+        format: uint16
+        x-nullable: false
+        description: 'Frontend port'
+        example: 443
       frontend_options:
         type: string
         x-nullable: true
         default: ''
         description: 'Frontend options'
         example: 'ssl'
+      frontend_ssl_options:
+        type: object
+        x-nullable: true
+        description: 'Backend check commands'
+        properties:
+          server_cert:
+            type: string
+            x-nullable: false
+          server_key:
+            type: string
+            x-nullable: false
+          ca_cert:
+            type: string
+            x-nullable: true
+          verify:
+            type: string
+            x-nullable: true
+            enum:
+              - required
+              - optional
       mode:
         type: string
         x-nullable: false
@@ -479,11 +483,6 @@ definitions:
   BackendServer:
     additionalProperties: false
     description: 'Backend server'
-    example:
-      name: 'node1'
-      ipaddress: '192.168.1.2'
-      port: 443
-      options: 'check check-ssl verify none'
     required:
       - name
       - ipaddress
@@ -509,3 +508,22 @@ definitions:
         x-nullable: true
         default: ''
         description: 'Backend server options'
+      check_ssl_options:
+        type: object
+        x-nullable: true
+        description: 'Backend check commands'
+        properties:
+          client_cert:
+            type: string
+            x-nullable: false
+          client_key:
+            type: string
+            x-nullable: false
+          ca_cert:
+            type: string
+            x-nullable: true
+          verify:
+            type: string
+            x-nullable: true
+            enum:
+              - none
